@startuml

title __USER's Class Diagram__\n

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.user {
        class com.soundlab.dockerizedjavaapi.core.domain.user.Admin {
'            + Admin()
'            + equals()
'            + hashCode()
'            + toString()
'            # canEqual()
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.user {
        class com.soundlab.dockerizedjavaapi.core.domain.user.Candidato {
            - respostas : List<Resposta>
'            + Candidato()
'            + equals()
'            + getRespostas()
'            + hashCode()
'            + setRespostas()
'            + toString()
'            # canEqual()
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.user {
        class com.soundlab.dockerizedjavaapi.core.domain.user.Empresa {
            ~ vagas : List<Vaga>
'            + Empresa()
'            + equals()
'            + getVagas()
'            + hashCode()
'            + setVagas()
'            + toString()
'            # canEqual()
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.user {
        class com.soundlab.dockerizedjavaapi.core.domain.user.User {
            - documentId : String
            - email : String
            - id : Long
            - name : String
            - password : String
'            + User()
'            + equals()
'            + getDocumentId()
'            + getEmail()
'            + getId()
'            + getName()
'            + getPassword()
'            + getUserType()
'            + hashCode()
'            + setDocumentId()
'            + setEmail()
'            + setId()
'            + setName()
'            + setPassword()
'            + setUserType()
'            + toString()
'            # canEqual()
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.user {
        enum UserType {
          ADMINISTRADOR
          CANDIDATO
          EMPRESA
          description
          id
        }
      }
    }
  }
  

  com.soundlab.dockerizedjavaapi.core.domain.user.Admin -up-|> com.soundlab.dockerizedjavaapi.core.domain.user.User
  com.soundlab.dockerizedjavaapi.core.domain.user.Candidato -up-|> com.soundlab.dockerizedjavaapi.core.domain.user.User
  com.soundlab.dockerizedjavaapi.core.domain.user.Empresa -up-|> com.soundlab.dockerizedjavaapi.core.domain.user.User
  com.soundlab.dockerizedjavaapi.core.domain.user.User -up-|> com.soundlab.dockerizedjavaapi.core.AuditableEntity
  com.soundlab.dockerizedjavaapi.core.domain.user.User o-- com.soundlab.dockerizedjavaapi.core.domain.user.UserType : userType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
